<resources>
    <string name="app_name">DemoCoding</string>
    <string name="MaRessourceTextView">Hello La Coding Il fait beau la vie est belle</string>
    <string name="unNouveauText">Ma ressource</string>
    <string name="unautreNouveauText">Ma deuxieme ressource</string>
    <string name="un_texte_au_hasard">Un texte au hasard</string>
    <string name="encore_un_autre_text">Encore un autre text</string>
    <string name="score">Score : </string>
    <string name="guess">Enter your guess : </string>
    <string name="your_guess">Your Guess</string>
    <string name="validate">Validate</string>
    <string name="hintText">Your number is :</string>
    <string name="hintInfo">Too SMALL</string>
    <string name="change_difficulty">Change Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">medium</string>
    <string name="hard">Hard</string>
    <string name="validate_difficulty">Validate Difficulty</string>
</resources>